logs/il2fb-ds-middleware.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/candv'...
Listing './lib/python3.5/site-packages/candv-1.3.1.egg-info'...
Listing './lib/python3.5/site-packages/il2fb'...
Listing './lib/python3.5/site-packages/il2fb/commons'...
Listing './lib/python3.5/site-packages/il2fb/commons/locale'...
Listing './lib/python3.5/site-packages/il2fb/commons/locale/en'...
Listing './lib/python3.5/site-packages/il2fb/commons/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/il2fb/commons/locale/ru'...
Listing './lib/python3.5/site-packages/il2fb/commons/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/il2fb/ds'...
Listing './lib/python3.5/site-packages/il2fb/ds/middleware'...
Listing './lib/python3.5/site-packages/il2fb/ds/middleware/console'...
Compiling './lib/python3.5/site-packages/il2fb/ds/middleware/console/client.py'...
***   File "./lib/python3.5/site-packages/il2fb/ds/middleware/console/client.py", line 124
    f"failed to send chat event {event} to "
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/il2fb/ds/middleware/console/requests.py'...
***   File "./lib/python3.5/site-packages/il2fb/ds/middleware/console/requests.py", line 71
    data = f"{self.body}{MESSAGE_DELIMITER}".encode()
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/il2fb/ds/middleware/device_link'...
Compiling './lib/python3.5/site-packages/il2fb/ds/middleware/device_link/client.py'...
***   File "./lib/python3.5/site-packages/il2fb/ds/middleware/device_link/client.py", line 51
    return f"[device link@{addr}:{port}] {{}}"
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/il2fb/ds/middleware/device_link/filters.py'...
***   File "./lib/python3.5/site-packages/il2fb/ds/middleware/device_link/filters.py", line 18
    LOG.error(f"invalid actor index (index={item.index})")
                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/il2fb/ds/middleware/device_link/helpers.py'...
***   File "./lib/python3.5/site-packages/il2fb/ds/middleware/device_link/helpers.py", line 16
    raise DeviceLinkValueError(f"malformed device link data {data}")
                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/il2fb/ds/middleware/device_link/messages.py'...
***   File "./lib/python3.5/site-packages/il2fb/ds/middleware/device_link/messages.py", line 41
    f"<"
       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/il2fb/ds/middleware/device_link/requests.py'...
***   File "./lib/python3.5/site-packages/il2fb/ds/middleware/device_link/requests.py", line 114
    f"msg count: {messages_sent_count} out of "
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/il2fb/ds/middleware/device_link/structures.py'...
***   File "./lib/python3.5/site-packages/il2fb/ds/middleware/device_link/structures.py", line 20
    return f"{self.__class__.__name__}({self.to_primitive()})"
                                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/il2fb_commons-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/il2fb_ds_middleware-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/inflect-0.2.5.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/stringlike'...
Listing './lib/python3.5/site-packages/stringlike-0.3.3.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/package'...
Listing './lib/python3.5/site-packages/tests/package/subpackage'...
Listing './lib/python3.5/site-packages/verboselib'...
Listing './lib/python3.5/site-packages/verboselib/management'...
Listing './lib/python3.5/site-packages/verboselib/management/commands'...
Listing './lib/python3.5/site-packages/verboselib-0.2.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
